syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Lactose.Grpc";

package Lactose.Common;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  google.protobuf.Timestamp requestTime = 1;
  string clientIdentifier = 2;
}

message HelloResponse {
  google.protobuf.Timestamp requestTime = 1;
  google.protobuf.Timestamp responseTime = 2;
  string serviceName = 3;
}